tests/NormalTests/paczka1/fuzzy1/73633275.err
Error in line 7: S875 S75 16,1
Error in line 17: KdH A873 20,2
Error in line 28: KdH A873 84,1
Error in line 36: KLSvLSb39 S75 268,3
